// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginatedEstablishmentsTable renders correctly when is NOT loading 1`] = `
<DocumentFragment>
  <label>
    Filter by Authority:
  </label>
  <select>
    <option
      value=""
    >
      All Authorities
    </option>
    <option
      value="1"
    >
      Authority 1
    </option>
    <option
      value="2"
    >
      Authority 2
    </option>
    <option
      value="3"
    >
      Authority 3
    </option>
  </select>
  <table
    style="min-height: 25rem;"
  >
    <thead>
      <tr>
        <th />
        <th>
          Business Name
        </th>
        <th>
          Rating Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td
          class="font-size-20"
        >
          <a
            data-discover="true"
            href="/22999/details"
          >
            Joe
          </a>
        </td>
        <td
          class="font-size-20"
        >
          5
        </td>
      </tr>
      <tr>
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td
          class="font-size-20"
        >
          <a
            data-discover="true"
            href="/67890/details"
          >
            Habib
          </a>
        </td>
        <td
          class="font-size-20"
        >
          4
        </td>
      </tr>
      <tr>
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td
          class="font-size-20"
        >
          <a
            data-discover="true"
            href="/09888/details"
          >
            Mc Hogwarts
          </a>
        </td>
        <td
          class="font-size-20"
        >
          3
        </td>
      </tr>
    </tbody>
  </table>
  <nav>
    <button
      disabled=""
      type="button"
    >
      &lt;  previous
    </button>
    <span
      style="font-weight: bold; margin: 1rem;"
    >
      1
    </span>
    <button
      type="button"
    >
      next  &gt;
    </button>
  </nav>
</DocumentFragment>
`;

exports[`PaginatedEstablishmentsTable renders correctly when is loading 1`] = `
<DocumentFragment>
  <label>
    Filter by Authority:
  </label>
  <select>
    <option
      value=""
    >
      All Authorities
    </option>
    <option
      value="1"
    >
      Authority 1
    </option>
    <option
      value="2"
    >
      Authority 2
    </option>
    <option
      value="3"
    >
      Authority 3
    </option>
  </select>
  <table
    style="min-height: 25rem;"
  >
    <thead>
      <tr>
        <th />
        <th>
          Business Name
        </th>
        <th>
          Rating Value
        </th>
      </tr>
      <tr>
        <th
          colspan="3"
        >
          <div>
            Loading...
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td
          class="font-size-20"
        >
          <a
            data-discover="true"
            href="/22999/details"
          >
            Joe
          </a>
        </td>
        <td
          class="font-size-20"
        >
          5
        </td>
      </tr>
      <tr>
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td
          class="font-size-20"
        >
          <a
            data-discover="true"
            href="/67890/details"
          >
            Habib
          </a>
        </td>
        <td
          class="font-size-20"
        >
          4
        </td>
      </tr>
      <tr>
        <td>
          <input
            type="checkbox"
          />
        </td>
        <td
          class="font-size-20"
        >
          <a
            data-discover="true"
            href="/09888/details"
          >
            Mc Hogwarts
          </a>
        </td>
        <td
          class="font-size-20"
        >
          3
        </td>
      </tr>
    </tbody>
  </table>
  <nav>
    <button
      disabled=""
      type="button"
    >
      &lt;  previous
    </button>
    <span
      style="font-weight: bold; margin: 1rem;"
    >
      1
    </span>
    <button
      type="button"
    >
      next  &gt;
    </button>
  </nav>
</DocumentFragment>
`;
